# sms-ingest

./: .gitignore  LICENSE  README.md
.github/workflows/: android-ci.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/xyz/imlazy/smsingest/: AppContainer.kt  MainActivity.kt  SmsIngestApplication.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/xyz/imlazy/smsingest/: AppContainerTest.kt
android/gradle/: libs.versions.toml
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  context.py  db.py  main.py
backend/app/api/: health.py  public_key.py  uploads.py
backend/app/core/: audit.py  auth.py  crypto.py  dedupe.py  field_crypto.py  retention.py  tokens.py
backend/app/models/: api.py  domain.py
backend/app/repositories/: app_config.py  audit_events.py  devices.py  sms_records.py  upload_batches.py
backend/app/services/: ingestion.py  provisioning.py
backend/cli/: main.py
backend/migrations/: 0001_initial.sql
backend/scripts/: test.sh
backend/tests/: conftest.py  test_auth.py  test_crypto.py  test_dedupe.py  test_health.py  test_ingestion.py  test_public_key.py  test_retention.py
infra/: README.md  docker-compose.yml  supabase-setup.sh
scripts/: README.md
(+24 files in other folders)
